########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

  * Logging of page views (in the problemactions) can now be enabled by setting
    cs_log_page_views = True

  * Allow running via "python3 -m catsoop" in addition to "catsoop"

CHANGED:

  * Upgraded KaTeX to version 0.13.11

  * Upgraded Twemoji to v13.1.0

  * On the main page, links are now shown even to courses that can't be
    properly loaded, so that the underlying issue is easier to find (clicking
    on the link shows a more detailed error message)

  * Auto-generated csq_name fields now increment only for questions that don't
    have names specified (reverts a change from 2020.9.0)

  * The pythonic and pythonliteral question types now allow checking for valid
    formatting

  * Reverted changes to cslog module and how the checker queue process works

  * Logs now store information about file uploads in a more intuitive format

  * cs_upload_management returns as a way to control where uploaded files are
    stored (directly in the database, or as separate files)

DEPRECATED:

REMOVED:

  * Removed PostgreSQL as a logging mechanism

FIXED:

  * Fixed issue with reporter websocket connection being lost frequently

  * Fixed a crash related to multiprocessing on MacOS with Python 3.8

  * Fixed an issue with rendering inline code blocks split across multiple
    lines of Markdown

  * Attempted fix for rendering of the catsoop logo in the footer on
    iOS/Safari

SECURITY:

  * Logs are now encrypted by default

  * Remove information about the Python version from the default footer

DOCUMENTATION:


####################
# Version 2021.2.0 #
####################

ADDED:

  * Added information about the Python version to the default footer

  * Added ability to easily change the Javascript callback functions invoked
    after taking an action using the built-in action buttons
